test/invalid/NotOperatorNotDefinedForMyType/NotOperatorNotDefinedForMyType.plume
/**
 * Not operator is not defined for other types.
 *
 * @author Diogo Marques, 30100
 */
class NotOperatorNotDefinedForMyType extends Object is
	
	method myMethod : () -> Boolean is
		!this